# reg-viz

./: Main.hs  README.md  reg-viz.cabal
src/: NFA.hs  Regex.hs
test/: Spec.hs
