cabal-version:       >=1.10

name:                reg-viz
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Lúcás Meier
maintainer:          cronokirby@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable reg-viz
  main-is:             src/Main.hs
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010
