cabal-version:       >=1.10

name:                reg-viz
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Lúcás Meier
maintainer:          cronokirby@gmail.com
build-type:          Simple
extra-doc-files:     README.md

library
  hs-source-dirs:      src
  exposed-modules:     Prelude
                     , Regex
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
  build-depends:       base-noprelude >=4.13 && <4.14
                     , relude >=0.6.0.0 && <0.7.0.0

executable reg-viz
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings, NoImplicitPrelude
  build-depends:       base-noprelude >=4.13 && <4.14
                     , reg-viz 
                     , relude >=0.6.0.0 && <0.7.0.0
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude


test-suite reg-viz-test
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    test
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                       base-noprelude >= 4.11 && < 5
                     , reg-viz
                     , hedgehog       >= 1.0  && < 1.1
                     , hspec          >= 2.7  && < 2.8
                     , relude         >=0.6.0.0 && <0.7.0.0
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
